--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Fitness club</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="styles.css" rel="stylesheet">
+</head>
+<body>
 
+<h1>Fitness club</h1>
+
+<section id="demos">
+    <!--<div id="liveView" class="camView"> -->
+    <div id="liveView" >
+    </div>
+</section>
+
+
+</body>
+</html>
