--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Fitness club</title>
-    <link href="../styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="description" content="Fitness Club">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -55,7 +55,7 @@
     firebase.initializeApp(firebaseConfig);
 </script>
 
-<script src="../main.js"></script>
+<script src="main.js"></script>
 
 
 </body>
