--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="input long"><input type="text" required="required" placeholder="Type a mess..." id="result"></div>
     </div>
 </div>
-<button style="margin-bottom: 30px" onclick="GetNutrients()">Check the calories</button>
+<button style="margin-bottom: 30px" onclick="GetNutrients()">Check nutrients</button>
 
 
 <div class="overlay left" id="person_wrap">
